--- a/TP1/Informe/TP1.tex
+++ b/TP1/Informe/TP1.tex
@@ -70,12 +70,15 @@
 
 \section*{\centering Abstract}
 {\em
-Meter el resumen al final...
-%end italics mode
+Las redes inform'aticas pueden tener una complejidad tal que describir la disposici'on, participaci'on y rol de los nodos de una red sin saber nada de ella pueda ser una tarea dificil.	\\
+\indent	El objetivo de este trabajo es lograr determinar cuales son nodos distinguidos en una red y un panorama de la topolog'ia y din'amica de la misma de una manera sencilla.	\\
+\indent	En este experimento se captur'o y analiz'o el tr'afico de paquetes ARP enviados en una red empresarial en pos de lograr el objetivo. Los an'alisis realizados estan basados en histogramas de direcciones IP destino y fuente, diagramas de actividad a lo largo del tiempo, el c'alculo de la entrop'ia de la red y la informaci'on de las direcciones, y el gráfico de la red como un digrafo.	\\
+\indent	Se encontr'o que si bien la mayor'ia de la red presenta un comportamiento de acuerdo al esperado de acuerdo a la teor'ia, aparecieron nodos cuyo comportamiento no solo es distinguido, si no que no se condiciona a lo esperado.	\\
+\indent	A partir de los resultados concluimos que el an'alisis de la red realizado en base a los mensajes ARP sirve para hallar nodos distinguidos en la red y obtener un panorama de la topolog'ia de la misma, no es suficiente para comprender la red y su din'amica en su totatiladad ya que se presentan fen'omenos y nodos distinguidos cuya participaci'on y rol no logramos determinar.
 }
 \vspace*{5 mm}
 
-Palabras Clave: 
+Palabras clave: red, ARP, nodos distinguidos, topolog'ia.
 
 
 \section{Introducci'on}
