--- a/TP2/Informe/resultados.tex
+++ b/TP2/Informe/resultados.tex
@@ -29,7 +29,12 @@ Enlace 	 &	Distancia en Km 	& 	RTT mínimo en ms	\\ \hline
 
 \subsection{Variación del RTT a lo largo del día}
 
-Hacer pings a los 6 ips de los enlaces a lo largo del dia
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=17cm]{rtts.png}
+\end{center}
+\caption{Tiempo de respuesta de los enlaces transatlánticos a lo largo del día} \label{figura1}
+\end{figure}
 
 \subsection{Casos curiosos}
 
@@ -41,4 +46,9 @@ Hacer pings a los 6 ips de los enlaces a lo largo del dia
 \caption{Traceroute a perfil.com.ar} \label{figura1}
 \end{figure}
 
-
+\begin{figure}[H]
+\begin{center}
+\includegraphics[width=17cm]{newzealand.png}
+\end{center}
+\caption{Traceroute a newzealand.govt.nz} \label{figura1}
+\end{figure}
