--- a/TP2/Informe/introduccion.tex
+++ b/TP2/Informe/introduccion.tex
@@ -1,13 +1,39 @@
 \section{IntroducciÃ³n}
 
+En este taller nos proponemos experimentar con herramientas y t'ecnicas frecuentes a nivel de red. M'as particularmente nos centraremos en dos muy conocidas y utilizadas: \texttt{ping} y \texttt{traceroute}. El objetivo es entender los protocolos involucrados. Para ello, desarrollaremos nuestras propias implementaciones de las herramientas de manera de afianzar los conocimientos. Todo lo anterior se realizar'a en un marco anal'itico que nos permitir'a razonar sobre lo hecho y comprender mejor qu'e pasa detrás de bambalinas.
+
 \subsection{ICMP}
 
-introduccion icmp
+El Protocolo de Mensajes de Control de Internet o ICMP es el sub protocolo de control y notificaci'on de errores del Protocolo de Internet (IP). Como tal, se usa para enviar mensajes de error, indicando por ejemplo que un servicio determinado no est'a disponible o que un router o host no puede ser localizado.
+
+ICMP difiere del propósito de TCP y UDP ya que generalmente no se utiliza directamente por las aplicaciones de usuario en la red. La 'unica excepci'on es la herramienta \texttt{ping} y \texttt{traceroute}, que env'ian mensajes de petici'on Echo ICMP (y recibe mensajes de respuesta Echo) para determinar si un host est'a disponible, el tiempo que le toma a los paquetes en ir y regresar a ese host y cantidad de hosts por los que pasa.
+
+\vspace*{5 mm}
+
+Los mensajes ICMP son com'unmente generados en respuesta a errores en los datagramas de IP o para diagn'ostico y ruteo. IP encapsula el mensaje ICMP apropiado con una nueva cabecera IP (para obtener los mensajes de respuesta desde el host original que env'ia), y transmite el datagrama resultante de manera habitual.
+
+Por ejemplo, cada router que reenv'ia un datagrama IP tiene que disminuir el campo de tiempo de vida (TTL) de la cabecera IP en una unidad; si el TTL llega a 0, un mensaje ICMP ''Tiempo de Vida se ha excedido en transmitirse'' es enviado a la fuente del datagrama. Cada mensaje ICMP es encapsulado directamente en un solo datagrama IP, y por tanto no garantiza la entrega del ICMP. Aunque los mensajes ICMP son contenidos dentro de datagramas est'andar IP, los mensajes ICMP se procesan como un caso especial del procesamiento normal de IP, algo as'i como el procesamiento de un sub-protocolo de IP. En muchos casos es necesario inspeccionar el contenido del mensaje ICMP y entregar el mensaje apropiado de error a la aplicaci'on que gener'o el paquete IP original, aquel que solicit'o el env'io del mensaje ICMP.
+
+\vspace*{5 mm}
+
+La utilidad del protocolo ICMP es controlar si un paquete no puede alcanzar su destino, si su vida ha expirado, etc. Es decir, se usa para manejar mensajes de error y de control necesarios para los sistemas de la red, informando con ellos a la fuente original para que evite o corrija el problema detectado.
+
+Muchas de las utilidades de red comunes est'an basadas en los mensajes ICMP. El comando \texttt{traceroute} est'a implementado transmitiendo datagramas UDP con campos especiales TTL IP en la cabecera, y buscando los mensajes de ''Tiempo de Vida en tr'ansito'' y ''Destino inalcanzable'' generados como respuesta. La herramienta \texttt{ping} est'a implementada utilizando los mensajes ''Echo request'' y ''Echo reply'' de ICMP.
 
 \subsection{Ping}
 
-introduccion ping
+Como programa, \texttt{ping} es una utilidad de diagn'ostico en redes de computadoras que comprueba el estado de la comunicaci'on del host local con uno o varios equipos remotos de una red TCP/IP por medio del env'io de paquetes ICMP de solicitud y de respuesta. Mediante esta utilidad puede diagnosticarse el estado, velocidad y calidad de una red determinada.
+
+\vspace*{5 mm}
+
+Ejecutando \texttt{ping} de solicitud, el Host local env'ia un mensaje ICMP, incrustado en un paquete IP. El mensaje ICMP de solicitud incluye, adem'as del tipo de mensaje y el c'odigo del mismo, un n'umero identificador y una secuencia de n'umeros, de 32 bits, que deber'an coincidir con el mensaje ICMP de respuesta; adem'as de un espacio opcional para datos. Muchas veces se utiliza para medir la latencia o tiempo que tardan en comunicarse dos puntos remotos.
 
 \subsection{Traceroute}
 
-introduccion traceroute
+\texttt{traceroute} es una consola de diagn'ostico que permite seguir la pista de los paquetes que vienen desde un host (punto de red). Se obtiene adem'as una estad'istica del RTT o latencia de red de esos paquetes, lo que viene a ser una estimaci'on de la distancia a la que est'an los extremos de la comunicaci'on. 
+
+\vspace*{5 mm}
+
+Entre los datos que se obtienen est'an: el n'umero de salto, el nombre y la dirección IP del nodo por el que pasa y el tiempo de respuesta para los paquetes enviados (un asterisco indica que no se obtuvo respuesta).
+
+\texttt{traceroute} utiliza el campo Time To Live (TTL) de la cabecera IP. Este campo sirve para que un paquete no permanezca en la red de forma indefinida (por ejemplo, debido a la existencia en la red de un bucle cerrado en la ruta). El campo TTL es un n'umero entero que es decrementado por cada nodo por el que pasa el paquete. De esta forma, cuando el campo TTL llega al valor 0 ya no se reenviar'a más, sino que el nodo que lo est'e manejando en ese momento lo descartar'a. Lo que hace \texttt{traceroute} es mandar paquetes a la red de forma que el primer paquete lleve un valor TTL=1, el segundo un TTL=2, etc. De esta forma, el primer paquete ser'a eliminado por el primer nodo al que llegue (ya que 'este nodo decrementar'a el valor TTL, llegando a cero). Cuando un nodo elimina un paquete, env'ia al emisor un mensaje de control especial indicando una incidencia. \texttt{traceroute} usa esta respuesta para averiguar la dirección IP del nodo que desech'o el paquete, que ser'a el primer nodo de la red. La segunda vez que se manda un paquete, el TTL vale 2, por lo que pasar'a el primer nodo y llegar'a al segundo, donde ser'a descartado, devolviendo de nuevo un mensaje de control. Esto se hace de forma sucesiva hasta que el paquete llega a su destino.
